--- a/backend/package.json
+++ b/backend/package.json
@@ -5,22 +5,23 @@
   "main": "dist/app.js",
   "scripts": {
     "start": "tsc && node dist/app.js",
-    "lint": "eslint .",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "format": "prettier --config .prettierrc 'src/**/*.ts --write"
+    "lint": "eslint . --fix --ext ts && prettier --write",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@eslint/js": "^9.6.0",
     "@types/express": "^4.17.1",
-    "eslint": "^9.6.0",
+    "@typescript-eslint/eslint-plugin": "^7.15.0",
+    "@typescript-eslint/parser": "^7.15.0",
+    "eslint": "^8.57.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-airbnb-typescript": "^18.0.0",
     "eslint-config-prettier": "^9.1.0",
-    "globals": "^15.8.0",
-    "prettier": "3.3.2",
-    "typescript": "^5.5.3",
-    "typescript-eslint": "^7.15.0"
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-prettier": "^5.1.3",
+    "typescript": "^5.5.3"
   },
   "dependencies": {
     "express": "^4.17.1"
