--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "tsc && node dist/app.js",
     "dev": "cross-env NODE_ENV=development nodemon",
-    "lint": "eslint . --fix --ext ts && prettier --write",
+    "lint": "eslint . --fix --ext ts && prettier --write --config .prettierrc.json .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -18,6 +18,7 @@
     "@types/cookie-parser": "^1.4.7",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.1",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^20.14.9",
     "@types/swagger-jsdoc": "^6.0.4",
@@ -46,6 +47,7 @@
     "envalid": "^8.0.0",
     "express": "^4.17.1",
     "helmet": "^7.1.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.4",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1"
