--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "antd": "^5.19.0",
+    "axios": "^1.7.2",
     "chart.js": "^4.4.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
