--- a/backend/.eslintrc
+++ b/backend/.eslintrc
@@ -23,7 +23,7 @@
         "import/no-extraneous-dependencies": [
           "error",
           {
-            "devDependencies": false,
+            "devDependencies": true,
             "optionalDependencies": false,
             "peerDependencies": false
           }
