refactor(frontend/dashboard): small updates to implementation

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/charts": "^2.1.1",
+    "@ant-design/plots": "^2.2.5",
     "antd": "^5.19.0",
     "axios": "^1.7.2",
     "chart.js": "^4.4.3",
