--- a/backend/package.json
+++ b/backend/package.json
@@ -38,6 +38,7 @@
     "typescript": "^5.5.3"
   },
   "dependencies": {
+    "aws-sdk": "^2.1659.0",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
