--- a/frontend/tsconfig.app.json
+++ b/frontend/tsconfig.app.json
@@ -7,6 +7,7 @@
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "module": "ESNext",
     "skipLibCheck": true,
+    "types": ["cypress"],
 
     /* Bundler mode */
     "moduleResolution": "bundler",
@@ -31,5 +32,6 @@
       "#root/*": ["./*"]
     }
   },
-  "include": ["src"]
+  "include": ["src", "cypress/support/component.ts"],
+  "exclude": ["cypress.config.ts", "node_modules"],
 }
