backend: refactor: changed the fields of user

--- a/backend/.env.development.example
+++ b/backend/.env.development.example
@@ -14,3 +14,9 @@ SECRET_KEY = semaphore
 # CORS
 ORIGIN = http://localhost:5173
 CREDENTIALS = true
+
+# EMAIL SERVICE
+SECRET_KEY = 
+ACCESS_KEY = 
+SES_REGION = ap-southeast-2
+SES_SENDER = 
