--- a/backend/.env.development.example
+++ b/backend/.env.development.example
@@ -16,7 +16,7 @@ ORIGIN = http://localhost:5173
 CREDENTIALS = true
 
 # EMAIL SERVICE
-SECRET_KEY = 
-ACCESS_KEY = 
+SES_SECRET_KEY = 
+SES_ACCESS_KEY = 
 SES_REGION = ap-southeast-2
 SES_SENDER = 
