backend - refactor: update  aws sdk version

--- a/backend/.env.development.example
+++ b/backend/.env.development.example
@@ -16,7 +16,7 @@ ORIGIN = http://localhost:5173
 CREDENTIALS = true
 
 # EMAIL SERVICE
-SES_SECRET_KEY = 
-SES_ACCESS_KEY = 
-SES_REGION = ap-southeast-2
-SES_SENDER = 
+SES_SECRET_KEY = example_secret_key
+SES_ACCESS_KEY = example_access_key
+SES_REGION = example_ses_region
+SES_SENDER = example_ses_sender
