--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "@types/jsonwebtoken": "^9.0.6",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^20.14.9",
+    "@types/pdfkit": "^0.13.4",
     "@types/supertest": "^6.0.2",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.6",
@@ -53,9 +54,11 @@
     "dotenv": "^16.4.5",
     "envalid": "^8.0.0",
     "express": "^4.17.1",
+    "fs": "^0.0.1-security",
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.4",
+    "pdfkit": "^0.15.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1"
   }
