fix: add working directory to load env

--- a/.github/workflows/jest.yml
+++ b/.github/workflows/jest.yml
@@ -23,6 +23,7 @@ jobs:
         node-version: '20'
 
     - name: Load environment variables
+      working-directory: ./backend
       run: |
         cp .env.development.example .env.test.local
         set -a
