--- a/backend/package.json
+++ b/backend/package.json
@@ -29,6 +29,7 @@
     "@typescript-eslint/eslint-plugin": "^7.15.0",
     "@typescript-eslint/parser": "^7.15.0",
     "cross-env": "^7.0.3",
+    "dotenv-cli": "^5.0.0",
     "eslint": "^8.57.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-airbnb-typescript": "^18.0.0",
