--- a/frontend/tsconfig.app.json
+++ b/frontend/tsconfig.app.json
@@ -7,7 +7,7 @@
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "module": "ESNext",
     "skipLibCheck": true,
-    "types": ["@testing-library/jest-dom", "cypress"],
+    "types": ["@testing-library/jest-dom", "vitest/globals", "cypress"],
 
     /* Bundler mode */
     "moduleResolution": "bundler",
