removed authentication from user routes and added logout test

--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -35,6 +35,6 @@
       "@utils/*": ["utils/*"]
     }
   },
-  "include": ["src/**/*.ts", "src/**/*.json", ".env"],
+  "include": ["src/**/*.ts", "src/**/*.json", ".env", "jest.setup.ts"],
   "exclude": ["node_modules", "src/http", "src/logs"]
 }
