--- a/backend/package.json
+++ b/backend/package.json
@@ -7,12 +7,14 @@
     "start": "tsc && node dist/app.js",
     "dev": "cross-env NODE_ENV=development nodemon",
     "lint": "eslint . --fix --ext ts && prettier --write --config .prettierrc.json .",
-    "test": "cross-env NODE_ENV=development jest --forceExit --coverage --detectOpenHandles"
+    "test": "cross-env NODE_ENV=test jest --forceExit --coverage --detectOpenHandles",
+    "fuzz": "cross-env NODE_ENV=fuzz jest"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@fast-check/jest": "^2.0.1",
     "@types/bcrypt": "^5.0.2",
     "@types/config": "^3.3.4",
     "@types/cookie-parser": "^1.4.7",
@@ -36,6 +38,7 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-prettier": "^5.1.3",
+    "fast-check": "^3.20.0",
     "jest": "^29.7.0",
     "node-config": "^0.0.2",
     "nodemon": "^3.1.4",
