feat: generate and download pdf

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "@ant-design/charts": "^2.1.1",
     "@ant-design/icons": "^5.3.7",
     "@ant-design/plots": "^2.2.5",
+    "@react-pdf/renderer": "^3.4.4",
     "antd": "^5.19.0",
     "axios": "^1.7.2",
     "chart.js": "^4.4.3",
